# FUNCARD

./: FUNCARD.xmind  esp_idf学习笔记.md  大体结构设计和需求.md
PCB/: ESP-Prj.Harness  ESP-Prj.SchDoc  ESP_PRJ.SchLib  Power.SchDoc  Sensor.SchDoc  esp32-s2.PrjPCB
PCB/__Previews/: ESP-Prj.SchDocPreview  Power.SchDocPreview  Sensor.SchDocPreview
board_layout/: esp32-s2_board v2.dxf
code/lvgl_compoent_i80_demo/: CMakeLists.txt  sdkconfig  sdkconfig.old
code/lvgl_compoent_i80_demo/components/audio/dac_audio/: dac_audio.c
code/lvgl_compoent_i80_demo/components/bus/: i2s_lcd_esp32s2_driver.c
code/lvgl_compoent_i80_demo/components/display/screen/controller_driver/st7789/: st7789.c
code/lvgl_compoent_i80_demo/components/display/screen/test/: lcd_color_test.c
code/lvgl_compoent_i80_demo/components/gui/lvgl_gui/: CMakeLists.txt  lvgl_adapter.c  lvgl_gui.c
code/lvgl_compoent_i80_demo/components/gui/lvgl_gui/include/: lvgl_gui.h
code/lvgl_compoent_i80_demo/main/: CMakeLists.txt  pro_lvgl.c
